--- a/login.css
+++ b/login.css
@@ -89,6 +89,11 @@ button a {
   height: 10px;
 }
 
+.login-box img {
+    width: -webkit-fill-available;
+    max-width: 100%;
+}
+
 .login-box h2 {
   margin: 0 0 30px;
   padding: 0;
