--- a/loading/loadind.css
+++ b/loading/loadind.css
@@ -469,7 +469,7 @@ footer p {
 }
 
 #device--content h3 {
-  color: red;
+  color: white;
   background-color: black;
   font-size: x-large;
   padding: 10px;
